negative_tests/test5.octo
3 + while(true){ return 6};
